--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Borealise Tours | オーロラを撮りにいくツアー |</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="shortcut icon" href="/images/favicon.ico">
-    <link rel="apple-touch-icon" href="/images/apple-touch-icon.png">
-    <link rel="icon" type="image/png" href="/images/android-chrome-256x256.png">
-    <script src="/js/jquery-3.4.1.min.js"></script>
-    <script src="/js/function.js"></script>
+    <link rel="shortcut icon" href="images/favicon.ico">
+    <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
+    <link rel="icon" type="image/png" href="images/android-chrome-256x256.png">
+    <script src="js/jquery-3.4.1.min.js"></script>
+    <script src="js/function.js"></script>
     <script src="https://kit.fontawesome.com/c38adf90fa.js" crossorigin="anonymous"></script>
 </head>
 
